fixed top margin on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -52,7 +52,7 @@ td, tr {
 }
 
 #entry-div {
-  margin-top: 100px;
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
 
@@ -529,6 +529,10 @@ th, td {
 
 
 @media screen and (min-width: 700px) {
+
+#entry-div {
+  margin-top: 100px;
+}
 
 .button {
   padding: 1px;
